--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <meta
+      name="description"
+      content="Filmoteka team project by GoIT students"
+    />
+    <title>Filmoteka</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="shortcut icon" href="./images/favicon-popcorn.ico" />
     <link rel="stylesheet" href="./sass/index.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
+    />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/spinner.html"></include>
+    <include src="./partials/main-header.html"></include>
+    <main>
+      <include src="./partials/button-up.html"></include>
+      <include src="./partials/gallery.html"></include>
+      <include src="./partials/modal-movie.html"></include>
+      <include src="./partials/pagination.html"></include>
+      <include src="./partials/modal-trailer.html"></include>
+    </main>
+    <include src="./partials/footer.html"></include>
   </body>
 </html>
